--- a/assets/styles/scss/06_pages/_about.scss
+++ b/assets/styles/scss/06_pages/_about.scss
@@ -16,7 +16,7 @@
   }
 
   #hero-image {
-    background-image: url('/assets/images/hero/about/hero-about-1920w.jpg');
+    background-image: url('../../../images/hero/about/hero-about-1920w.jpg');
   }
 
   #intro-section {
