--- a/assets/styles/scss/06_pages/_services.scss
+++ b/assets/styles/scss/06_pages/_services.scss
@@ -16,7 +16,7 @@
   }
 
   #hero-image {
-    background-image: url('/assets/images/hero/services/hero-services-1920w.jpg');
+    background-image: url('../../../images/hero/services/hero-services-1920w.jpg');
   }
 
   #what-are-you-interested-in-section {
