--- a/assets/styles/scss/06_pages/_work.scss
+++ b/assets/styles/scss/06_pages/_work.scss
@@ -16,7 +16,7 @@
   }
 
   #hero-image {
-    background-image: url('/assets/images/hero/work/hero-work-1920w.jpg');
+    background-image: url('../../../images/hero/work/hero-work-1920w.jpg');
   }
 
   #featured-cases-section {
