--- a/assets/styles/scss/06_pages/_distilled.scss
+++ b/assets/styles/scss/06_pages/_distilled.scss
@@ -16,7 +16,7 @@
   }
 
   #hero-image {
-    background-image: url('../../../images/hero/distilled/hero-distilled-1920w.jpg');
+    background-image: url('../../images/hero/distilled/hero-distilled-1920w.jpg');
   }
 
   .article {
